# model_serving

./: Dockerfile  README.md  cli.py  entrypoint.sh  pyproject.toml  requirements.txt
data/: iris.sav
