[tool.poetry]
name = "k8s-model-serving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "k8s_model_serving"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
sanic = "*"
flask = "^2.2.2"
pandas = "^1.5.0"
joblib = "^1.2.0"
scikit-learn = "^1.1.2"
boto3 = "^1.24.92"
botocore = "^1.27.92"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
